===== 0.7.18 (??? ??, 2010) =====
* Local library activity has been moved to a separate process
* French resources have been updated (by Mathias Monnerville)
* German resources have been updated (by Ingolf Kübler)

===== 0.7.17 (Nov 14, 2010) =====
* Network catalog order has been changed: language is used for ordering
* LitRes authentication has been fixed

===== 0.7.16 (Nov 11, 2010) =====
* Czech resources have been updated
* An NPE during library starting has been fixed (this NPE only occures on systems with locale "not supported" by FBReader (like Spanish, Finnish, Japan, etc.)

===== 0.7.15 (Nov 11, 2010) =====
* External TTF fonts are supported (for Android version >= 1.6)
* Ukrainian localization (by Dmytro Shevchenko) has been added
* Default font size depends on display DPI

===== 0.7.14 (Nov 03, 2010) =====
* Ukrainian hyphenations have been fixed
* Czech resources have been updated

===== 0.7.13 (Oct 28, 2010) =====
* Keys backlight is now disabled during reading
* Czech resources have been updated

===== 0.7.12 (Oct 28, 2010) =====
* Filemanager associations have been fixed

===== 0.7.11 (Oct 24, 2010) =====
* Several crashes have been fixed

===== 0.7.10 (Oct 24, 2010) =====
===== 0.7.9 (Oct 24, 2010) =====
* List of styles has been fixed in the Options dialog
* Monospace font has been included in the fonts list
* Keypressings are handled in the synchronous mode

===== 0.7.8 (Oct 10, 2010) =====
* Processing of large OPDS feeds (> 500 books in one file) has been fixed
* Network library doesn't throw an Exception if an SD card is unavailable
* Internal change: Error messaging system in network library has been rewritten using excpetions
* Better error processing for litres e-book catalog

===== 0.7.7 (Oct 06, 2010) =====
* Text rotation has been implemented

===== 0.7.6 (Oct 05, 2010) =====
* Application icon with better resolution has been added
* Czech localization (by Marek Pavelka) has been added